# kuti-cryptopad

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: crypto.rs  main.rs
ui/: app-window.slint
